--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expr-eval",
+  "name": "expr-eval-fork",
   "version": "2.0.2",
-  "description": "Mathematical expression evaluator",
+  "description": "Mathematical expression evaluator fork with prototype pollution fix",
   "main": "dist/bundle.js",
   "module": "dist/index.mjs",
   "typings": "parser.d.ts",
@@ -36,7 +36,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/silentmatt/expr-eval.git"
+    "url": "git+https://github.com/jorenbroekema/expr-eval.git"
   },
   "keywords": [
     "expression",
@@ -46,10 +46,10 @@
     "function",
     "parser"
   ],
-  "author": "Matthew Crumley",
+  "author": "Joren Broekema",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/silentmatt/expr-eval/issues"
+    "url": "https://github.com/jorenbroekema/expr-eval-fork/issues"
   },
-  "homepage": "https://github.com/silentmatt/expr-eval#readme"
+  "homepage": "https://github.com/jorenbroekema/expr-eval-fork#readme"
 }
