--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "expr-eval-fork",
-  "version": "2.0.2",
-  "description": "Mathematical expression evaluator fork with prototype pollution fix",
+  "version": "3.0.0",
+  "description": "Mathematical expression evaluator fork with exports map, prototype pollution and code injection security fixes",
   "main": "dist/bundle.js",
   "module": "dist/index.mjs",
   "typings": "parser.d.ts",
+  "exports": {
+    ".": {
+      "types": "./parser.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/bundle.js"
+    }
+  },
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-config-semistandard": "^15.0.0",
