fix: node 16.9 min requirement for Object.hasOwn

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/bundle.js",
   "module": "dist/index.mjs",
   "typings": "parser.d.ts",
+  "engines": {
+    "node": ">=16.9.0"
+  },
   "exports": {
     ".": {
       "types": "./parser.d.ts",
