chore: fix prepublish script

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint": "eslint index.js src test rollup.config.js rollup-min.config.js",
     "watch": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js && rollup -c rollup-min.config.js && rollup -c rollup-esm.config.js",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "dist/",
